Заменить getFirst() на get(0), сократить запись компоратора, изменить название метода